--- a/css/utilities.css
+++ b/css/utilities.css
@@ -98,6 +98,14 @@ button {
     width: 25%;
 }
 
+.w-50 {
+    width: 50%;
+}
+
+.w-80 {
+    width: 80%;
+}
+
 .w-100 {
     width: 100%;
 }
